--- a/config.toml
+++ b/config.toml
@@ -19,7 +19,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 
 [[menu.main]]
     name = "Home"
-    url = "https://nanx.me"
+    url = "https://advranderfullife.netlify.com"
     weight = 1
 [[menu.main]]
     name = "GitHub"
