--- a/config.toml
+++ b/config.toml
@@ -12,7 +12,7 @@ disable_mathjax = false
 pygmentsstyle      = "vs"
 pygmentscodefences = true
 
-ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
+ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_cache$"]
 
 [params]
   sitename = "Adventures in randerful life"
